Derive media URLs from bucket and object key
Updates media schema to store bucket instead of file_url and
implements dynamic URL construction.

--- a/backend/api/justfile
+++ b/backend/api/justfile
@@ -92,7 +92,7 @@ restore zip_file:
 
 # Database migrations
 migrate:
-    cargo run --bin migration
+    cargo run -p migration --bin migrate -- up
 
 # Utility commands
 lsof:
