--- a/frontend/admin-dioxus/Cargo.toml
+++ b/frontend/admin-dioxus/Cargo.toml
@@ -88,10 +88,21 @@ ruxlog-shared = { path = "../ruxlog-shared", features = ["image-editor", "admin-
 dioxus-time = { path = "../dioxus_pkgs/sdk/packages/time", version = "0.7.3" }
 
 [features]
-default = ["web"]
+default = ["web", "basic"]
 web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
+
+# Blog feature flags
+basic = []
+full = ["analytics", "newsletter", "comments", "user-management", "admin-acl", "admin-routes"]
+
+analytics = []
+newsletter = []
+comments = []
+user-management = []
+admin-acl = []
+admin-routes = []
 
 [profile]
 
