Unify consumer auth behind single feature flag
Replaces auth-oauth and auth-register with consumer-auth.
Auth guards, routes, and navbar UI are now conditionally
compiled, allowing the app to build as a pure public blog
in basic mode without authentication code.

--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -94,11 +94,11 @@ mobile = ["dioxus/mobile"]
 
 # Blog feature flags
 basic = []
-full = ["auth-oauth", "auth-register", "profile-management", "comments"]
+full = ["consumer-auth", "profile-management", "comments"]
 
-auth-oauth = []
-auth-register = []
-profile-management = []
+# Authentication features
+consumer-auth = []           # Enables login/register/auth functionality
+profile-management = ["consumer-auth"]  # Requires consumer-auth
 comments = []
 
 [profile]
