Add Firebase Analytics integration
Added analytics module with WASM bindings, Dioxus hooks, and event
tracker. Integrated page view, scroll depth, and engagement tracking.
Added ShareBox component with social sharing support.

--- a/frontend/consumer-dioxus/Dioxus.toml
+++ b/frontend/consumer-dioxus/Dioxus.toml
@@ -12,7 +12,7 @@ title = "consumer-dioxus"
 style = []
 
 # Additional JavaScript files
-script = []
+script = ["assets/firebase-init.js"]
 
 [web.resource.dev]
 
