--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -81,6 +81,7 @@ oxstore = { path = "../oxstore" }
 oxform = { path = "../oxform" }
 oxui = { path = "../oxui" }
 ruxlog-shared = { path = "../ruxlog-shared" }
+urlencoding = "2.1"
 
 [patch.crates-io]
 # dioxus-time = { git = "https://github.com/DioxusLabs/sdk", branch = "main", version = "0.1.0-alpha.1" }
@@ -101,6 +102,7 @@ consumer-auth = []           # Enables login/register/auth functionality
 profile-management = ["consumer-auth"]  # Requires consumer-auth
 comments = []
 engagement = []              # Enables views, likes, and social engagement metrics
+analytics = []               # Enables Firebase Analytics tracking (wasm32-only)
 
 [profile]
 
