--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -88,7 +88,7 @@ urlencoding = "2.1"
 dioxus-time = { path = "../dioxus_pkgs/sdk/packages/time", version = "0.7.3" }
 
 [features]
-default = ["web", "basic"]
+default = ["web", "basic", "analytics"]
 web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
@@ -102,7 +102,7 @@ consumer-auth = []           # Enables login/register/auth functionality
 profile-management = ["consumer-auth"]  # Requires consumer-auth
 comments = []
 engagement = []              # Enables views, likes, and social engagement metrics
-analytics = []               # Enables Firebase Analytics tracking (wasm32-only)
+analytics = []               # Enables Firebase Analytics tracking (wasm32-only, enabled by default)
 
 [profile]
 
