--- a/frontend/consumer-dioxus/Dioxus.toml
+++ b/frontend/consumer-dioxus/Dioxus.toml
@@ -12,7 +12,7 @@ title = "consumer-dioxus"
 style = []
 
 # Additional JavaScript files
-script = ["assets/firebase-init.js"]
+script = []
 
 [web.resource.dev]
 
