Implement comprehensive SEO for consumer app
Add `seo` module with automated hooks for posts, categories, and tags.
Integrate `SeoHead` component to render meta tags, Open Graph data,
Twitter Cards, and JSON-LD structured data.

Configure `CONSUMER_SITE_URL` in environment files and add SSG
build recipe `consumer-build-ssg` to the Justfile.

--- a/.env.stage
+++ b/.env.stage
@@ -11,6 +11,7 @@ ALLOWED_ORIGINS=https://stage.hmziq.rs
 ADMIN_APP_API_HOST=
 ADMIN_PORT=1207
 CONSUMER_PORT=1208
+CONSUMER_SITE_URL=https://stage-blog.hmziq.rs
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=1201
