--- a/.env.dev
+++ b/.env.dev
@@ -11,6 +11,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
+CONSUMER_SITE_URL=http://localhost:1108
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=1101
