--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
+CONSUMER_SITE_URL=http://localhost:1108
 
 # Database
 POSTGRES_HOST=localhost
