--- a/.env.prod
+++ b/.env.prod
@@ -11,6 +11,7 @@ ALLOWED_ORIGINS=https://hmziq.rs,https://blog.hmziq.rs
 ADMIN_APP_API_HOST=
 ADMIN_PORT=8080
 CONSUMER_PORT=8081
+CONSUMER_SITE_URL=https://blog.hmziq.rs
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
