--- a/.env.remote
+++ b/.env.remote
@@ -11,6 +11,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
+CONSUMER_SITE_URL=http://192.168.0.23:1108
 
 POSTGRES_HOST=192.168.0.23
 POSTGRES_PORT=1101
