--- a/.env.test
+++ b/.env.test
@@ -11,6 +11,7 @@ ALLOWED_ORIGINS=http://localhost:3000
 ADMIN_APP_API_HOST=
 ADMIN_PORT=1307
 CONSUMER_PORT=1308
+CONSUMER_SITE_URL=http://localhost:1308
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=1301
