--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.40", features = ["serde"] }
-dioxus = { version = "0.7.3", features = ["router"] }
+dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
+dioxus-ssr = "0.7.3"
+dioxus-liveview = "0.7.3"
 dioxus-time = { version = "0.7.3" }
 reqwest = { version = "0.12.22", features = ["json", "cookies"] }
 serde = "1.0.219"
