--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -9,10 +9,9 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.40", features = ["serde"] }
 dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
-dioxus-ssr = "0.7.3"
-dioxus-liveview = "0.7.3"
+dioxus-ssr = { version = "0.7.3", optional = true }
+dioxus-liveview = { version = "0.7.3", optional = true }
 dioxus-time = { version = "0.7.3" }
-reqwest = { version = "0.12.22", features = ["json", "cookies"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
 validator = { version = "0.20", features = ["derive"] }
@@ -94,6 +93,7 @@ default = ["web", "basic", "analytics"]
 web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
+server = ["dioxus/server", "dioxus-ssr", "dioxus-liveview"]
 
 # Blog feature flags
 basic = []
