--- a/frontend/oxcore/Cargo.toml
+++ b/frontend/oxcore/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+once_cell = "1.19"
 
 # WASM HTTP client
 [target.'cfg(target_arch = "wasm32")'.dependencies]
