--- a/frontend/oxui/Cargo.toml
+++ b/frontend/oxui/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.7.3" }
-dioxus-time = { version = "0.1.0-alpha.1" }
 hmziq-dioxus-free-icons = { version = "0.10.1", features = ["simple-icons", "lucide"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -15,10 +14,14 @@ uuid = { version = "1.16.0", features = ["v4"] }
 oxform = { path = "../oxform" }
 oxstore = { path = "../oxstore" }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1", features = ["time"] }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 dioxus = { version = "0.7.3", features = ["web"] }
 uuid = { version = "1.16.0", features = ["v4", "js"] }
 js-sys = "0.3"
+gloo-timers = { version = "0.3.0", features = ["futures"] }
 web-sys = { version = "0.3.69", features = [
     "Document",
     "Window",
