Add consumer static demo SSG mode
Introduce demo-static-content feature for static hosting deployments.
Loads markdown posts from content/posts/ with YAML frontmatter,
pre-renders public routes via SSG, and supports configurable base
paths for subpath hosting.

--- a/.env.dev
+++ b/.env.dev
@@ -12,6 +12,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
 CONSUMER_SITE_URL=http://localhost:1108
+CONSUMER_BASE_PATH=/
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=1101
