--- a/.env.stage
+++ b/.env.stage
@@ -12,6 +12,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=1207
 CONSUMER_PORT=1208
 CONSUMER_SITE_URL=https://stage-blog.hmziq.rs
+CONSUMER_BASE_PATH=/
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=1201
