--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
 CONSUMER_SITE_URL=http://localhost:1108
+CONSUMER_BASE_PATH=/
 
 # Database
 POSTGRES_HOST=localhost
