--- a/.env.prod
+++ b/.env.prod
@@ -12,6 +12,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=8080
 CONSUMER_PORT=8081
 CONSUMER_SITE_URL=https://blog.hmziq.rs
+CONSUMER_BASE_PATH=/
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
