--- a/.env.remote
+++ b/.env.remote
@@ -12,6 +12,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=1107
 CONSUMER_PORT=1108
 CONSUMER_SITE_URL=http://192.168.0.23:1108
+CONSUMER_BASE_PATH=/
 
 POSTGRES_HOST=192.168.0.23
 POSTGRES_PORT=1101
