--- a/.env.test
+++ b/.env.test
@@ -12,6 +12,7 @@ ADMIN_APP_API_HOST=
 ADMIN_PORT=1307
 CONSUMER_PORT=1308
 CONSUMER_SITE_URL=http://localhost:1308
+CONSUMER_BASE_PATH=/
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=1301
