--- a/frontend/consumer-dioxus/Cargo.toml
+++ b/frontend/consumer-dioxus/Cargo.toml
@@ -37,6 +37,9 @@ oxform = { path = "../oxform" }
 oxui = { path = "../oxui" }
 ruxlog-shared = { path = "../ruxlog-shared" }
 urlencoding = "2.1"
+include_dir = { version = "0.7.4", optional = true }
+serde_yaml = { version = "0.9.34", optional = true }
+pulldown-cmark = { version = "0.13.0", optional = true }
 
 # Server-only dependencies
 tokio = { version = "1", features = ["full"], optional = true }
@@ -124,6 +127,7 @@ profile-management = ["consumer-auth"]  # Requires consumer-auth
 comments = []
 engagement = []              # Enables views, likes, and social engagement metrics
 analytics = []               # Enables Firebase Analytics tracking (wasm32-only, enabled by default)
+demo-static-content = ["include_dir", "serde_yaml", "pulldown-cmark"]
 
 [profile]
 
