chore: Update Dioxus CLI installation to use official script

--- a/.github/workflows/archive/release-builds.yml
+++ b/.github/workflows/archive/release-builds.yml
@@ -16,7 +16,6 @@ concurrency:
 
 env:
   CARGO_TERM_COLOR: always
-  DIOXUS_CLI_VERSION: "0.7.3"
   RUST_BACKTRACE: "1"
 
 jobs:
@@ -76,7 +75,8 @@ jobs:
 
       - name: Install Dioxus CLI
         run: |
-          cargo install --locked dioxus-cli --version "${DIOXUS_CLI_VERSION}"
+          curl -sSL https://dioxus.dev/install.sh | bash
+          echo "$HOME/.dioxus/bin" >> "$GITHUB_PATH"
           dx --version
 
       - name: Set renderer-specific bundle identifier
@@ -282,7 +282,8 @@ jobs:
 
       - name: Install Dioxus CLI
         run: |
-          cargo install --locked dioxus-cli --version "${DIOXUS_CLI_VERSION}"
+          curl -sSL https://dioxus.dev/install.sh | bash
+          echo "$HOME/.dioxus/bin" >> "$GITHUB_PATH"
           dx --version
 
       - name: Set renderer-specific bundle identifier
